# temoto_visualization_manager

./: .gitmodules  CMakeLists.txt  README.md  package.xml
include/temoto_output_manager/: output_manager_interface.h  temoto_output_manager_interface.h  temoto_output_manager_services.h
include/temoto_output_manager/rviz_manager/: plugin_info.h  rviz_manager.h
src/: temoto_output_manager.cpp
src/rviz_manager/: plugin_info.cpp  rviz_manager.cpp
srv/: LoadRvizPlugin.srv
temoto_visualization_manager/: CMakeLists.txt  README.md  package.xml
temoto_visualization_manager/include/temoto_visualization_manager/: plugin_info.h  visualization_manager.h  visualization_manager_interface.h  visualization_manager_services.h
temoto_visualization_manager/launch/: visualization_manager_test.launch
temoto_visualization_manager/src/: plugin_info.cpp  visualization_manager.cpp  visualization_manager_node.cpp
temoto_visualization_manager/src/examples/: plugin_description.yaml  visualization_manager_test.cpp
temoto_visualization_manager/srv/: LoadRvizPlugin.srv
