<?xml version="1.0"?>
<package format="2">
  <name>temoto_output_manager</name>
  <version>0.0.0</version>
  <description>The temoto_output_manager package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cmake_modules</build_depend>
	<build_depend>message_generation</build_depend>
  <build_depend>rviz_plugin_manager</build_depend>
  <build_depend>temoto_core</build_depend>
  <build_depend>temoto_er_manager</build_depend>
  <build_depend>temoto_robot_manager</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cmake_modules</exec_depend>
	<exec_depend>message_runtime</exec_depend>
  <exec_depend>rviz_plugin_manager</exec_depend>
  <exec_depend>temoto_core</exec_depend>
  <exec_depend>temoto_er_manager</exec_depend>
  <exec_depend>temoto_robot_manager</exec_depend>

</package>
