<?xml version="1.0"?>
<package format="2">
  <name>temoto_output_manager</name>
  <version>0.0.0</version>
  <description>The temoto_output_manager package</description>

  <maintainer email="robert.valner@ut.ee">Robert Valner</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
	<depend>message_generation</depend>
  <depend>rviz_plugin_manager</depend>
  <depend>temoto_core</depend>
  <depend>temoto_er_manager</depend>

</package>
